[project]
name = "my_dagster_project"
version = "0.1.0"
description = "Dagster workflows example project"
requires-python = ">=3.9"
dependencies = [
    "dagster==1.9.10",
    "dagster-postgres==0.25.10",
    "pandas==2.2.3",
    "polars==1.21.0",
    "duckdb==1.1.3",
    "psycopg-binary==3.2.4",
    "pyarrow==19.0.0",
    "requests==2.32.3",
    "numpy==2.2.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.dagster]
module_name = "my_dagster_project"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3